--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@
 title = "Config"
 
 [params]
+#files must be different
 input = ["in1.in", "in2.in", "in3.in"]
 output = ["in1.out", "out2.out", "out3.out"]
 #in bytes per second
